mdapi/Custom/objects/IntranetFormList__c.object
<CustomObject>
    <description>Related to Intranet deployment.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Select_Approver__c</fullName>
        <label>Select Approver</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Users__c</fullName>
        <label>Selected Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skip_Reviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <label>IntranetFormList</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IntranetFormLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>